--- a/src/styles/geral.css
+++ b/src/styles/geral.css
@@ -5,12 +5,10 @@ body{
 }
 .container-fluid{
     padding: 0;
-    background-color: white;
+    background-color: #d6d6d6;
     height: 100vh;
-    border-top-width: 0px;
-    border-left-width: 0px;
-    border-right-width: 0px;
-    border-bottom-width: 5px;
-    border-style: solid;
-    border-color: black;
+}
+
+hr{
+    margin: 0;
 }
