--- a/src/styles/cabecalho.css
+++ b/src/styles/cabecalho.css
@@ -1,4 +1,28 @@
-#cabecalho{
+/*================ parte da logo ==================*/
+#navBar{
+    background-color: rgba(219, 219, 219, 0);
+}
+
+#navBar div{
+    float: left; /*colocar na mesma linha*/
+}
+
+/*================ parte das opções ==================*/
+#navbarNavAltMarkup{
+    position: absolute;
+    right: 0;
+}
+
+
+.logoImagem{
+    height: 35px;
+    width: 35px;
+    background-color: white;
+    border-radius: 25px;
+    margin-right: 15px;
+}
+
+/*#cabecalho{
     background-color: cadetblue;
     align-items: center;
     height: 40px;
@@ -53,3 +77,4 @@ div li{
     color: black;
     transition: all 0.8s;
 }
+*/
