--- a/src/styles/geral.css
+++ b/src/styles/geral.css
@@ -1,14 +1,14 @@
-body{
-    background-color: black;
-    text-align: center;
+body, html{
     margin: 0;
-}
-.container-fluid{
-    padding: 0;
-    background-color: #d6d6d6;
+    overflow-x: hidden;
     height: 100vh;
+    width: 100vw;
+
+    background: url('../../images/wallpaper1Att.jpg');
+}
+p, a{
+    margin: 0;
+    padding: 0;
 }
 
-hr{
-    margin: 0;
-}
+
